--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 Implementations:
-[] fix "no song currently playing" flash when changing songs
+[x] fix "no song currently playing" flash when changing songs
 [] implement clear button for entire queue
 [] add tokens to each call for better safety
 [] mobile version -> maybe, kinda useful tho
