--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 Implementations:
 [x] fix "no song currently playing" flash when changing songs
-[] implement clear button for entire queue
+[x] implement clear button for entire queue
 [] add tokens to each call for better safety
 [] mobile version -> maybe, kinda useful tho
 [] add propper status code returns 
